<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.FragmentClientes">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bordes"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="26dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="30dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/tv_nuevo_cliente"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Spinner
            android:id="@+id/spn_precio"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@color/cuadros"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/et_nombre"
            android:hint="Nombre del cliente"
            android:textColorHint="@color/gris"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@color/cuadros"
            android:padding="5dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_guardar_cliente"
            android:text="@string/btn_guardar_cliente"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/bordes"/>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bordes"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="26dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/tv_editar_cliente"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Spinner
            android:id="@+id/spn_precio_editar"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@color/cuadros"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/spn_editar_cliente"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/cuadros"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cambiar_nombre"
                android:text="@string/btn_cambiar_nombre"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="@color/bordes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Switch
                android:id="@+id/sw_activo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>